# industrial-product-scraper

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/scraper/: __init__.py  crawler.py  downloader.py  parser.py  schema.py
src/utils/: __init__.py  connection.py  logger.py
tests/: test_logger.py
