[project]
name = "industrial-product-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml-html-clean>=0.4.2",
    "playwright>=1.52.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "urllib3>=1.26.20",
]
